--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,31 @@
-// 1. Import the initial variables
+// Import the initial variables
 @import "bulma/sass/utilities/initial-variables";
 @import "bulma/sass/utilities/functions";
 
-// 2. Setup your Custom Colors
-$purple: hsl(275,87%,45%);
-$purple-invert: findColorInvert($purple);
+// Setup your Custom Colors
+$slate-blue: hsla(178%, 16%, 42%, 1);
+$azure-white: hsla(230%, 64%, 91%, 1);
+$dark: hsla(206%, 19%, 17%, 1);
+$light-blue: hsla(200%, 35%, 72%, 1);
+$gray: hsla(251%, 12%, 73%, 1);
 
-// 3. Add new color variables to the color map.
+// Set Colors
+$primary: $slate-blue;
+$footer-background-color: $dark;
+$is-dark: $dark;
+$link: $dark;
+$white: $azure-white;
+$black: $dark;
+
+// Add new color variables to the color map.
 @import "bulma/sass/utilities/derived-variables.sass";
 
 $addColors: (
-  "purple":($purple, $purple-invert),
+  "slate-blue":($slate-blue, $dark),
+  "azure-white":($azure-white, $dark),
+  "dark":($dark, $azure-white),
+  "light-blue":($light-blue, $dark),
+  "gray":($gray, $dark)
 );
 
 $colors: map-merge($colors, $addColors);
@@ -21,5 +36,6 @@ $colors: map-merge($colors, $addColors);
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: #a0c1d1;
 }
